# ruckig_traj_smoothing

./: CMakeLists.txt  README.md  package.xml  ruckig_traj_smoothing.repos
src/: time_optimal_trajectory_generation.cpp
